[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "securepickle"
version = "1.2.0"
description = "HMAC-verified pickle serialization - because a jar of pickles comes tamper-proof"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Michael Almeida, 1001224879 Ontario Inc." }
]
keywords = [
    "pickle",
    "security",
    "hmac",
    "serialization",
    "encryption",
    "tamper-proof"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
fast = ["xxhash>=3.0.0"]
encrypt = ["cryptography>=3.0.0"]
all = ["xxhash>=3.0.0", "cryptography>=3.0.0"]

[project.scripts]
securepickle = "secure_pickle:main"

[project.urls]
Homepage = "https://github.com/securepickle/securepickle"
Documentation = "https://github.com/securepickle/securepickle#readme"
Repository = "https://github.com/securepickle/securepickle"
Issues = "https://github.com/securepickle/securepickle/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/secure_pickle.py",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
